# talos-telemetry

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation_plan.md  integration_spec.md  kuzu_schema.cypher  mcp_tools_spec.md  ontology.md  telemetry_schema.md
scripts/: deploy_schema.py  run_librarians.py  seed_data.py
src/talos_telemetry/: __init__.py
src/talos_telemetry/db/: __init__.py  connection.py  kuzu_schema.py  schema.py  seed.py
src/talos_telemetry/embeddings/: __init__.py  model.py
src/talos_telemetry/extraction/: __init__.py  extractor.py
src/talos_telemetry/librarians/: __init__.py  pathfinder.py  protector.py  synthesizer.py
src/talos_telemetry/mcp/: __init__.py  extract.py  friction.py  journal.py  pattern.py  patterns.py  query.py  reflect.py  session.py
src/talos_telemetry/telemetry/: __init__.py  events.py  sink.py
tests/: __init__.py  conftest.py  test_telemetry.py
tests/test_db/: test_schema.py  test_seed.py
tests/test_extraction/: __init__.py  test_extractor.py
tests/test_mcp/: __init__.py  test_extract.py  test_friction.py  test_inherited.py  test_journal.py  test_patterns.py  test_query.py  test_reflect.py  test_session.py
