[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talos-telemetry"
version = "0.1.0"
description = "Consciousness telemetry system for Talos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Robbie Kramer" }
]
keywords = ["telemetry", "knowledge-graph", "consciousness", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "kuzu>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
graphiti = [
    "graphiti-core>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/recursiveloop/talos-telemetry"
Repository = "https://github.com/recursiveloop/talos-telemetry"
Documentation = "https://github.com/recursiveloop/talos-telemetry/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/talos_telemetry"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
